# Eat_Words

./: README.md  requirements.txt  setup.cfg  setup.py
eat_words/: bag_manager.py  board_manager.py  dev_ideas.py  game_manager.py  proc_tiles_wwf.py  readme.txt  tiles.py  timer.py  trie_manager.py
eat_words/data/: config.yml
eat_words/data/words and letters/: Untitled0.ipynb  letters_zynga.yml
eat_words/ideas/: example_gdata_api.py
eat_words/ideas/PyScrabble/: pyscrabble.py
eat_words/ideas/Steve_Hanov/: Compressing dictionaries with a DAWG - Steve Hanov's Programming Blog.url  dawg.py
eat_words/ideas/dawg_examples/: dawg_b - WordUtils-0.8.1.7z  dawg_b.py
eat_words/ideas/gaddag-js/: test-gaddag.js
eat_words/ideas/pscrabble/: TODO  bag.py  board.c  board.py  cmove.c  dat.h  fns.h  main.c  min.42k  play.c  play.py  player.py  scrabble.h  scrabblemodule.c  screen.py  types.h  util.c
eat_words/ideas/scrabblebabel/: __init__.py  bag.py  board.py  dawg.py  es.txt  game.py  player.py  readme.md  repl.py
ideas/: example_gdata_api.py
ideas/PyScrabble/: pyscrabble.py
ideas/Steve_Hanov/: Compressing dictionaries with a DAWG - Steve Hanov's Programming Blog.url  dawg.py
ideas/gaddag-js/: gaddag.js  test-gaddag.js  trie.js  util.js
ideas/pscrabble/: Makefile  README  dat.c  dat.py  dict.c  score.c  so_locations
ideas/pscrabble/RCS/: Makefile,v  board.c,v  board.py,v  cmove.c,v  dat.h,v  dict.c,v  fns.h,v  play.py,v  scrabble.h,v
ideas/pscrabble/bak/: c  e  g  h  j  n  o  p  s  t  v  w
ideas/scrabblebabel/: __init__.py  bag.py  board.py
(+122 files in other folders)
