[metadata]
name = eat_words
author = Pierre V. Villeneuve
author_email = pierre.villeneuve@gmail.com
description = Play a nice game of scrabble
long_description = file: README.md
url = https://github.com/Who8MyLunch/Eat_Words
keywords = words, letters, scrabble

[options]
zip_safe = True

[bdist_wheel]
universal = True

[sdist]
keep-temp = False

[clean]
all = True
